k3s-userapps/nextcloud/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: nextcloud
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      pod: mysql
  template:
    metadata:
      labels:
        pod: mysql
    spec:
      volumes:
        - name: nextcloud-db
          persistentVolumeClaim:
            claimName: nextcloud-db
      containers:
        - image: 'mariadb:11.4'
          imagePullPolicy: IfNotPresent
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
              name: "sftp"
          args: [ "--transaction-isolation=READ-COMMITTED", "--binlog-format=ROW" ]
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: nextcloud-db
