k3s-userapps/nextcloud/opencloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencloud
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opencloud
  template:
    metadata:
      labels:
        app: opencloud
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: opencloud
          image: opencloudeu/opencloud-rolling:5.2.0
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c", "[ -f /etc/opencloud/opencloud.yaml ] || opencloud init --insecure true; opencloud server"]
          ports:
            - containerPort: 9200
              name: http
          volumeMounts:
            - name: data
              mountPath: /etc/opencloud
              subPath: config
            - name: data
              mountPath: /var/lib/opencloud
              subPath: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: opencloud-data
