k3s-userapps/nextcloud/homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: nextcloud
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      pod: homepage
  template:
    metadata:
      labels:
        pod: homepage
    spec:
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
      containers:
        - image: 'klakegg/hugo:0.101.0-asciidoctor'
          imagePullPolicy: IfNotPresent
          name: homepage
          args: [ "server", "-b", "https://kirillorlov.pro/", "--appendPort=false", "--log" ]
          ports:
            - containerPort: 1313
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /src
              name: nextcloud
              subPath: data/diverofdark/files/website
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: nextcloud
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 1313
  selector:
    pod: homepage
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
  name: homepage
  namespace: nextcloud
spec:
  rules:
  - host: www.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.kirillorlov.pro
    - kirillorlov.pro
    secretName: homepage-tls
