k3s-userapps/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://cloud.kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Nextcloud
    gethomepage.dev/icon: nextcloud.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=nextcloud"
    gethomepage.dev/widget.type: nextcloud
    gethomepage.dev/widget.url: http://nextcloud.nextcloud.svc.cluster.local
    gethomepage.dev/widget.key: "$WIDGET_KEY$"
    kirillorlov.pro/annotationsFromSecretName: nextcloud-secret
  name: nextcloud
  namespace: nextcloud
  labels:
    kirillorlov.pro/expose: external
spec:
  rules:
  - host: cloud.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: nextcloud
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cloud.kirillorlov.pro
    secretName: cloud-tls
