k3s-userapps/nextcloud/kapowarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kapowarr
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://kapowarr.kirillorlov.pro"
    gethomepage.dev/group: "Media"
    gethomepage.dev/name: kapowarr
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=kapowarr"
    gethomepage.dev/icon: "https://raw.githubusercontent.com/homarr-labs/dashboard-icons/refs/heads/main/svg/kapowarr.svg"
spec:
  rules:
    - host: kapowarr.kirillorlov.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kapowarr
                port:
                  number: 5656
  tls:
    - hosts:
        - kapowarr.kirillorlov.pro
      secretName: kapowarr-tls
---
apiVersion: v1
kind: Service
metadata:
  name: kapowarr
  namespace: nextcloud
spec:
  selector:
    app.kubernetes.io/pod: kapowarr
  ports:
    - protocol: TCP
      port: 5656
      targetPort: 5656
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapowarr
  namespace: nextcloud
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/pod: kapowarr
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: kapowarr
    spec:
      volumes:
        - name: kapowarr-db
          persistentVolumeClaim:
            claimName: kapowarr-db
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
        - name: kapowarr-temp-downloads
          emptyDir: {}
      containers:
        - name: kapowarr
          image: mrcas/kapowarr:v1.2.0
          ports:
            - containerPort: 5656
              name: http
          volumeMounts:
            - name: kapowarr-db
              mountPath: /app/db
            - name: kapowarr-temp-downloads
              mountPath: /app/temp_downloads
            - name: kapowarr-root-folder
              mountPath: /nextcloud
